--- a/text_alignment.html
+++ b/text_alignment.html
@@ -15,10 +15,10 @@
 
   <body class="text-center pt-10">
 
-    <p class="text-left">I am left text</p>
-    <p class="text-center">I am centered text</p>
-    <p class="text-right">I am right text</p>
-    <p class="text-justify">I am justify text</p>
+    <p class="text-left">Left Text</p>
+    <p class="text-center">Centered text</p>
+    <p class="text-right">Right Text</p>
+    <p class="text-justify">Justify text</p>
 
     <!-- Back to Home Link -->
     <div class="pt-6">
